--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
   mockito: ^5.4.1
   stacked_generator: ^1.3.3
   golden_toolkit: ^0.15.0
+  csc_picker_plus: ^0.0.3
 
 flutter:
   uses-material-design: true
